# GRBModels

./: .clang-format  .gitignore  CMakeLists.txt  README.md  makefile  requirements.txt
binder/: bindings.cpp  bindings_constants.cpp  bindings_formulae.cpp
include/: bandGRB.hpp  blackBody.hpp  bremsstrahlung.hpp  brokenPowerLaw.hpp  constants.hpp  cutOffPowerLaw.hpp  cutOffs.hpp  logNormal.hpp  maxwellBoltzmann.hpp  normal.hpp  norris.hpp  planckLaw.hpp  powerLaw.hpp  rayleigh.hpp  rayleighJeans.hpp  smoothlyBrokenPowerLaw.hpp  utilities.hpp  weibull.hpp
src/: bandGRB.cpp  bindings.cpp  blackBody.cpp  bremsstrahlung.cpp  brokenPowerLaw.cpp  constants.cpp  cutOffPowerLaw.cpp  cutOffs.cpp  logNormal.cpp  maxwellBoltzmann.cpp  normal.cpp  norris.cpp  planckLaw.cpp  powerLaw.cpp  rayleigh.cpp  rayleighJeans.cpp  smoothlyBrokenPowerLaw.cpp  utilities.cpp  weibull.cpp
